--- a/.flowconfig
+++ b/.flowconfig
@@ -7,5 +7,12 @@
 [lints]
 
 [options]
+no_flowlib=true
 
 [strict]
+nonstrict-import
+unclear-type
+unsafe-getters-setters
+untyped-import
+untyped-type-import
+sketchy-null
